--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
+<a onfocus=blur() href="javascript:void(window.open('http://ndolphin-james.github.io/Donut_Test','win0','width=100%,height=100%,status=no,toolbar=no,scrollbars=no'))">메뉴</a>
     <div id="unity-container" class="unity-desktop"
 style="width: 100%; height: 100%">
       <canvas id="unity-canvas"></canvas>
