--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
+<body style="overflow:hidden;"></body>
     <div id="unity-container" class="unity-desktop"
 style="width: 100%; height: 100%">
       <canvas id="unity-canvas"></canvas>
